[package]
name = "starcoin-graphd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "~1"
serde = { version = "~1", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
axum = { version = "^0.8.4", default-features = false, features = ["http1", "json"] }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "8d41c280a227594ca0a2b6ecba580643518274ea" }
async-trait = "0.1.88"
anyhow = "~1"
reqwest = { version = "0.12.15", features = ["json"] }
hex = "0.4.3"
[[bin]]
name = "starcoin-graphd"
path = "src/main.rs"
